--- a/src/app/pages/chat/chat.component.html
+++ b/src/app/pages/chat/chat.component.html
@@ -1,39 +1,73 @@
 <main>
   <div class="container">
-    <h3 class="mb-3">Supa Chat <button class="btn btn-secondary" style="float: right;">Log
-        out</button>
+    <h3 class="mb-3">Supa Chat 
+      <button (click)="logOut()" class="btn btn-secondary" style="float: right;">Log out</button>
     </h3>
     <div class="card">
       <div>
-
         <div class="col-12 col-lg-12 col-xl-12">
-          <div class="position-relative">
-            <div class="chat-messages p-4">
-              <div class="chat-message-left pb-4">
-                <div class="me-5">
-                  <img
-                    src="https://res.cloudinary.com/dz4tt9omp/image/upload/v1687699216/photo_5960666862087946083_w.jpg"
-                    class="rounded-circle mr-1" alt="Sharon Doe" width="40" height="40">
-                  <div class="text-muted small text-nowrap mt-2">5:54 am</div>
-                </div>
-                <div class="flex-shrink-1 bg-light rounded py-2 px-3 ml-3">
-                  <div class="font-weight-bold mb-1">Sharon Doe</div>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid at ullam reiciendis consequatur quis
-                  similique ea sapiente, voluptatem voluptate quia magnam a non corrupti unde accusantium maiores?
-                  Explicabo, maiores inventore!
 
-                </div>
+          @for (msg of chats; track msg.id) {
+
+         <div class="position-relative">
+  <div class="chat-messages p-4">
+    <div class="chat-message-left pb-4 d-flex">
+      
+      <div class="d-flex flex-column align-items-center me-3" style="width: 100px;">
+        
+        <div class="text-muted extra-small text-center mb-1" style="font-size: 0.75rem; line-height: 1.2;">
+          {{ msg?.created_at | date: 'M/d/yy' }}<br>
+          {{ msg?.created_at | date: 'h:mm a' }}
+        </div>
+
+        <img
+          [src]="msg?.users?.avatar_url || 'https://res.cloudinary.com/dz4tt9omp/image/upload/v1687699216/photo_5960666862087946083_w.jpg'"
+          class="rounded-circle shadow-sm" 
+          [alt]="msg.users?.full_name" 
+          width="45" height="45">
+      </div>
+
+      <div class="flex-shrink-1 bg-light rounded py-2 px-3 shadow-sm" style="max-width: 80%;">
+        <div class="font-weight-bold mb-1" style="color: #333;">
+          {{ msg?.users?.full_name }}
+        </div>
+        
+        <div class="text-break">
+          {{ msg?.text }}
+        </div>
+        <div class="dropdown">
+                      <span (click)="openDropDown(msg)" class="mt-3 ms-5" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+    ...
+  </span>
+   <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                        <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Delete</a>
+                        </li>
+                      </ul>
+</div>
+      </div>
+
+    </div>
+  </div>
+</div>
+          } @empty {
+            <div class="p-4 text-center">No chats available</div>
+          }
+
+          <form [formGroup]="chatForm" (ngSubmit)="onSubmit()">
+            <div class="flex-grow-0 py-3 px-4 border-top">
+              <div class="input-group">
+                <input id="chat_message" name="chat_message" formControlName="chat_message" type="text" class="form-control" placeholder="Type your message">
+                <button [disabled]="!chatForm.valid" class="btn btn-primary">Send</button>
               </div>
             </div>
-          </div>
-          <div class="flex-grow-0 py-3 px-4 border-top">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Type your message">
-              <button class="btn btn-primary">Send</button>
-            </div>
-          </div>
+          </form>
+
         </div>
       </div>
     </div>
   </div>
 </main>
+
+<!-- <modal</modal> -->
+
+
